@@ -1,5 +1,7 @@
 === master
 
+* Deprecate Model.cti_columns in the class_table_inheritance plugin (jeremyevans)
+
 * Deprecate SQL::AliasedExpression#aliaz, use #alias instead (jeremyevans)
 
 * Deprecate SQL::Function#f, use #name instead (jeremyevans)
